--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <!-- adding favicon  -->
-    <script src="https://kit.fontawesome.com/bcb7dc0129.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/bcb7dc0129.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -53,22 +56,25 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a
+                    class="nav-link fancy-link active"
+                    aria-current="page"
+                    href="#"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#buy-cows">Buy Cows</a>
+                  <a class="nav-link fancy-link" href="#buy-cows">Buy Cows</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#features">Features</a>
+                  <a class="nav-link fancy-link" href="#features">Features</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link fancy-link" href="#">Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about-us">About Us</a>
-                  </li>
+                  <a class="nav-link fancy-link" href="#about-us">About Us</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -95,15 +101,19 @@
               title-font
               mb-2
               md:w-2/5
-              animate__animated
-              animate__fadeInLeftBig
-            
+              animate__animated animate__fadeInLeftBig
             "
           >
             Buy Quality Cow From US
           </h2>
           <div class="md:w-3/5 md:pl-6">
-            <p class="leading-relaxed text-base animate__animated animate__fadeInLeft">
+            <p
+              class="
+                leading-relaxed
+                text-base
+                animate__animated animate__fadeInLeft
+              "
+            >
               We sell the best cow in the world and to the farest corner of our
               country. From teknaf to Tetulia we send cows with zero delivery
               prizes. We take no shipping costs from July 1st to July 20.So, You
@@ -121,9 +131,7 @@
                   focus:outline-none
                   hover:bg-yellow-600
                   rounded
-                  animate__animated
-                  animate__fadeInLeftBig
-                  animate__delay-2s
+                  animate__animated animate__fadeInLeftBig animate__delay-2s
                 "
               >
                 Subscribe
@@ -362,7 +370,18 @@
         </div>
       </section>
       <section id="buy-cows" class="container my-5">
-        <h3 class="animate__animated animate__fadeInLeft animate__delay-2s p-2 mb-4 bg-warning text-center mb-4">সল্প মূল্লে কিনুন গরু</h3>
+        <h3
+          class="
+            animate__animated animate__fadeInLeft animate__delay-2s
+            p-2
+            mb-4
+            bg-warning
+            text-center
+            mb-4
+          "
+        >
+          সল্প মূল্লে কিনুন গরু
+        </h3>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col shadow-lg rounded-3">
             <div class="card h-100">
@@ -438,23 +457,75 @@
         </div>
       </section>
       <section id="about-us" class="container">
-          <div>
-              <h4>অনলাইনে বিশাল গরুর হাট (২০২১) -  </h4>
-              <p>কুরবানির ঈদ তো বলতে গেলে ঘরের দোরগোড়ায়! একটা ভালো দেখে কুরবানির গরু তো কেনা চাই, তাই না? কিন্তু আপনি হয়ত ভাবছেন হাটে গিয়ে পছন্দমাফিক গরু কেনার অসহ্য কষ্টের কথা, তারপর তো আবার জীবাণু সংক্রমণের ভয় তো থাকছেই। আপনার এতসব ভোগান্তির ব্যাপার-স্যাপার মাথায় রেখেই দারাজের আয়োজনে আবারও শোভা পাচ্ছে বিশাল অনলাইন গরুর হাট। বাংলাদেশের ই-কমার্স ইতিহাসে সবচেয়ে বড় এই কুরবানির হাটে পাবেন সারাদেশ থেকে বাছাইকৃত সেরা মানের হৃষ্টপুষ্ট গরু। দারাজ অনলাইন কুরবানির গরুর হাটে (২০২১) থাকছে ১০০% অর্গানিক গরু, যেগুলো অবশ্যই গ্রাম বাংলার আলো-ছায়ায় ঘরোয়া পরিবেশে পালিত। তাই দারাজ গরুর হাটের যেকোন গরুর উন্নত স্বাস্থের ব্যাপারে চিন্তার কোন অবকাশ নেই</p>
-              <h4>কুরবানির গরু (২০২১) কিনুন সেরা দামে </h4>
-              <p>আপনি যদি অনলাইনে সাশ্রয়ী বাজেটের মধ্যে সেরা অর্গানিক গরু খুঁজে থাকেন, তাহলে দারাজ অনলাইন গরুর হাট বাজার (২০২১) হবে আপনার কুরবানির গরু (২০২১) কেনার জন্য সবচেয়ে নির্ভরযোগ্য ও আস্থার ঠিকানা। অনলাইনে সবচেয়ে বড় কুরবানির গরুর হাটে আপনি গরুর ছবি ও বিবরণ দেখেশুনে ও যাচাই-বাছাই করে কিনতে পারবেন। মহান প্রতিপালকের উদ্দেশ্যে আপনার করা কুরবানি বা মহান ত্যাগের বিষয়টিকে আমরা শ্রদ্ধাভরে উপলব্ধি করি, আর তাই রোগ-ব্যাধি মুক্ত, সুস্থ-সবল ও সবচেয়ে ভালো গরুটিকেই বেশি অগ্রাধিকার দেওয়া হয়েছে বাংলাদেশের অনলাইন গরুর হাট দারাজে। আর ঘরে বসে কুরবানির গরুর সবচেয়ে সেরা দাম কেবল দারাজেই উপভোগ করার সুযোগ রয়েছে। তাছাড়া দারাজ থেকে গরু অর্ডার করার আরও বিশেষ সুবিধা রয়েছে, শর্ত সাপেক্ষে ফ্রি হোম ডেলিভারি ছাড়াও ব্যাপক ডিসকাউন্ট অফার লুফে নিতে পারবেন আপনিও! এক্ষেত্রে গরুর বাজার দর (২০২১) থেকেও অনেক কম দামে গরু কেনার সুযোগ থাকছে দারাজে, যা আপনি আজকের গরুর বাজার দর থেকে মিলিয়ে দেখতে পারেন। তাহলে আর দেরি কেন? সবচেয়ে সেরা দামে কুরবানির গরু অর্ডার করুন অনলাইনে, আর ঢাকা সহ সারাদেশে দ্রুত ডেলিভারি উপভোগ করুন ঘরে বসে।
-            </p>
-          </div>
+        <div>
+          <h4>অনলাইনে বিশাল গরুর হাট (২০২১) -</h4>
+          <p>
+            কুরবানির ঈদ তো বলতে গেলে ঘরের দোরগোড়ায়! একটা ভালো দেখে কুরবানির গরু
+            তো কেনা চাই, তাই না? কিন্তু আপনি হয়ত ভাবছেন হাটে গিয়ে পছন্দমাফিক গরু
+            কেনার অসহ্য কষ্টের কথা, তারপর তো আবার জীবাণু সংক্রমণের ভয় তো থাকছেই।
+            আপনার এতসব ভোগান্তির ব্যাপার-স্যাপার মাথায় রেখেই দারাজের আয়োজনে
+            আবারও শোভা পাচ্ছে বিশাল অনলাইন গরুর হাট। বাংলাদেশের ই-কমার্স ইতিহাসে
+            সবচেয়ে বড় এই কুরবানির হাটে পাবেন সারাদেশ থেকে বাছাইকৃত সেরা মানের
+            হৃষ্টপুষ্ট গরু। দারাজ অনলাইন কুরবানির গরুর হাটে (২০২১) থাকছে ১০০%
+            অর্গানিক গরু, যেগুলো অবশ্যই গ্রাম বাংলার আলো-ছায়ায় ঘরোয়া পরিবেশে
+            পালিত। তাই দারাজ গরুর হাটের যেকোন গরুর উন্নত স্বাস্থের ব্যাপারে
+            চিন্তার কোন অবকাশ নেই
+          </p>
+          <h4>কুরবানির গরু (২০২১) কিনুন সেরা দামে</h4>
+          <p>
+            আপনি যদি অনলাইনে সাশ্রয়ী বাজেটের মধ্যে সেরা অর্গানিক গরু খুঁজে
+            থাকেন, তাহলে দারাজ অনলাইন গরুর হাট বাজার (২০২১) হবে আপনার কুরবানির
+            গরু (২০২১) কেনার জন্য সবচেয়ে নির্ভরযোগ্য ও আস্থার ঠিকানা। অনলাইনে
+            সবচেয়ে বড় কুরবানির গরুর হাটে আপনি গরুর ছবি ও বিবরণ দেখেশুনে ও
+            যাচাই-বাছাই করে কিনতে পারবেন। মহান প্রতিপালকের উদ্দেশ্যে আপনার করা
+            কুরবানি বা মহান ত্যাগের বিষয়টিকে আমরা শ্রদ্ধাভরে উপলব্ধি করি, আর তাই
+            রোগ-ব্যাধি মুক্ত, সুস্থ-সবল ও সবচেয়ে ভালো গরুটিকেই বেশি অগ্রাধিকার
+            দেওয়া হয়েছে বাংলাদেশের অনলাইন গরুর হাট দারাজে। আর ঘরে বসে কুরবানির
+            গরুর সবচেয়ে সেরা দাম কেবল দারাজেই উপভোগ করার সুযোগ রয়েছে। তাছাড়া
+            দারাজ থেকে গরু অর্ডার করার আরও বিশেষ সুবিধা রয়েছে, শর্ত সাপেক্ষে
+            ফ্রি হোম ডেলিভারি ছাড়াও ব্যাপক ডিসকাউন্ট অফার লুফে নিতে পারবেন
+            আপনিও! এক্ষেত্রে গরুর বাজার দর (২০২১) থেকেও অনেক কম দামে গরু কেনার
+            সুযোগ থাকছে দারাজে, যা আপনি আজকের গরুর বাজার দর থেকে মিলিয়ে দেখতে
+            পারেন। তাহলে আর দেরি কেন? সবচেয়ে সেরা দামে কুরবানির গরু অর্ডার করুন
+            অনলাইনে, আর ঢাকা সহ সারাদেশে দ্রুত ডেলিভারি উপভোগ করুন ঘরে বসে।
+          </p>
+        </div>
+      </section>
+      <section>
+        <div id="about-us" class="details container my-5">
+<img class="rock w-75 mx-auto " src="dwayne-the-rock-.jpg" alt="">
+<div class="hover-text text-center ">
+  <h3>Jane Doe</h3>
+  <h4>Developer</h4>
+  <p>Nulla rhoncus orci sed odio euismod vestibulum. Praesent porta aliquet nulla, ut mattis velit rhoncus eu duspendisse nibh orci laoreet. </p>
+</div>
+ 
+        </div>
       </section>
     </main>
     <footer>
-        <div class="icon text-center my-5"><i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-google-plus-g"></i>
-            <i class="fab fa-snapchat-square"></i>
-       <p class="text-secondary">&copy;2021 , All rights are reserved</p> 
-        
+      <div class="all-icon text-center my-5">
+        <div class="wrapper">
+          <div class="icon"><i class="fab fa-facebook-f"> </i></div>
+          <span>Facebook</span>
         </div>
+        <div class="wrapper">
+          <div class="icon"><i class="fab fa-twitter"> </i></div>
+          <span>Twitter</span>
+        </div>
+        <div class="wrapper">
+          <div class="icon"><i class="fab fa-instagram"> </i></div>
+          <span>Instagram</span>
+        </div>
+        <div class="wrapper">
+          <div class="icon"><i class="fab fa-github"> </i></div>
+          <span>Github</span>
+        </div>
+        <div class="wrapper">
+          <div class="icon"><i class="fab fa-youtube"> </i></div>
+          <span>Youtube</span>
+        </div>
+      </div>
     </footer>
     <!-- adding java script 
     ---------------------- -->
